Use shared components

--- a/src/content/graphos/metrics/notifications/daily-reports.mdx
+++ b/src/content/graphos/metrics/notifications/daily-reports.mdx
@@ -1,18 +1,27 @@
 ---
-title: Daily reports from GraphOS Studio
-subtitle: Learn how to act on daily summaries of your graph's activity
+title: Daily reports
+subtitle: Set up and act on daily summaries of your graph's activity
 description: Receive daily GraphQL activity summaries with Apollo GraphOS notifications. Analyze metrics to identify and resolve issues.
 ---
 
-You can [configure GraphOS](./notification-setup/) to send your team a daily summary of your graph's activity over the last 24 hours:
+Configure GraphOS to send a daily Slack summary of your graph's activity over the last 24 hours.
 
-<img src="../../img/integrations/slack-report.png" width="400" alt="Slack daily report" class="screenshot" />
-
-When you configure daily reports, you can specify what time you want to receive them each day.
+<img
+  src="../../img/integrations/slack-report.png"
+  width="400"
+  alt="Slack daily report"
+  className="screenshot"
+/>
 
 ## Setup
 
-See [Setting up GraphOS Notifications](./notification-setup).
+<CreateNotification />
+
+8. Select a time zone. The report is sent daily at 9 AM in the selected time zone.
+
+### Configuring a new channel
+
+<ConfigureSlackNotification />
 
 ## Acting on report data
 
