--- a/src/content/shared/create-notification.mdx
+++ b/src/content/shared/create-notification.mdx
@@ -3,6 +3,5 @@
 3. Click **Add notification** in the upper right.
 4. Select a notification type and click **Next**.
 5. In the dropdown, select which graph variant you want to receive notifications for.
-6. Select an existing configured channel to send notifications to, or select which type of new channel you want to configure. Click **Next**.
-7. If you're configuring a new channel, complete the steps in [Configuring a new channel](#configuring-a-new-channel).
-8. If you're creating a daily report, select a time zone. The report is sent daily at 9 AM in the selected time zone.
+6. Select an existing channel to send notifications to, or select which type of new channel you want to configure. Click **Next**.
+7. If you're configuring a new channel, complete the steps in the next section.
