--- a/src/content/graphos/metrics/notifications/build-status-notification.mdx
+++ b/src/content/graphos/metrics/notifications/build-status-notification.mdx
@@ -1,6 +1,6 @@
 ---
 title: Build status notifications
-subtitle: Receive webhook alerts whenever GraphOS attempts to build a new supergraph schema
+subtitle: Receive alerts when GraphOS attempts to compose a supergraph schema
 description: Configure Apollo GraphOS to notify your team via webhook about schema build attempts in your federated graph.
 ---
 
@@ -8,17 +8,20 @@ description: Configure Apollo GraphOS to notify your team via webhook about sche
 
 <PreviewFeature />
 
-You can [configure GraphOS](./notification-setup) to notify your team via webhook whenever GraphOS attempts to build a new supergraph schema for your [federated graph](/federation/). The notification indicates whether the build succeeded and provides a temporary URL to the new supergraph schema if so.
-
-You can configure separate change notifications for each [variant](../../graphs/#variants) of your graph.
+Configure GraphOS to send notifications to a custom webhook whenever GraphOS attempts to build a new supergraph schema for your federated graph.
+Notifications indicate whether the build succeeded. Succecssful build notifications include a temporary URL to the new supergraph schema if so.
 
 ## Setup
 
-See [Setting up GraphOS Notifications](./notification-setup).
+<CreateNotification />
+
+## Configuring a new channel
+
+<ConfigureWebhookNotification />
 
 ## Webhook format
 
-Build status notifications are sent exclusively as [webhooks](./notification-setup/#custom-webhooks-enterprise-only). Details are provided as a JSON object in the request body.
+Custom webhook notification details are provided as a JSON object in the request body.
 
 The JSON object conforms to the structure of the `ResponseShape` interface:
 
