--- a/src/content/graphos/metrics/notifications/index.mdx
+++ b/src/content/graphos/metrics/notifications/index.mdx
@@ -26,7 +26,7 @@ Refer to the specific notification type page for setup instructions.
 
 ## Supported channels
 
-GraphOS can send motification types to the indicated channels:
+GraphOS can send notification types to the indicated channels:
 
 | Notification Type             | Slack | PagerDuty | Custom Webhook |
 | :---------------------------- | :---: | :-------: | :------------: |
