--- a/src/content/graphos/metrics/notifications/build-status-notification.mdx
+++ b/src/content/graphos/metrics/notifications/build-status-notification.mdx
@@ -9,7 +9,7 @@ description: Configure Apollo GraphOS to notify your team via webhook about sche
 <PreviewFeature />
 
 Configure GraphOS to send notifications to a custom webhook whenever GraphOS attempts to build a new supergraph schema for your federated graph.
-Notifications indicate whether the build succeeded. Succecssful build notifications include a temporary URL to the new supergraph schema if so.
+Notifications indicate whether the build succeeded. Successful build notifications include a temporary URL to the new supergraph schema if so.
 
 ## Setup
 
