Update security pillar description from document

--- a/src/content/graphos/enterprise/supergraph-architecture-framework/security.mdx
+++ b/src/content/graphos/enterprise/supergraph-architecture-framework/security.mdx
@@ -3,7 +3,7 @@ title: Security
 description: Protect your data and infrastructure with a defense-in-depth approach
 ---
 
-**Security** is now a given part of an API Strategy and GraphQL should have no exceptions to your organization's standards. Traditional HTTP-based tools often lack in their support for GraphQL which makes it even more critical to use an enterprise-grade GraphQL Platform like Apollo GraphOS to run your supergraph.
+The **Security** pillar focuses on ways you can make sure your API is secure, even while using the new paradigms of GraphQL, and how they can operate with your existing organization's standards. Traditional HTTP-based tools often lack support for GraphQL, which makes it even more critical to use an enterprise-grade GraphQL Platform like Apollo GraphOS to run your supergraph.
 
 ## Principles
 
