--- a/src/content/graphos/cloud-routing/dedicated/lattice.mdx
+++ b/src/content/graphos/cloud-routing/dedicated/lattice.mdx
@@ -27,7 +27,7 @@ flowchart LR;
   clients -->|Requests| router;
 ```
 
-This guide shows how to create Lattice services and share them with GraphOS. This configuration lets your GraphOS cloud routers securly communicate with your private subgraphs.
+This guide shows how to create Lattice services and share them with GraphOS. This configuration lets your GraphOS cloud routers securely communicate with your private subgraphs.
 
 <Note>
 
