Update createNotification usage

--- a/src/content/graphos/metrics/notifications/build-status-notification.mdx
+++ b/src/content/graphos/metrics/notifications/build-status-notification.mdx
@@ -13,7 +13,7 @@ Notifications indicate whether the build succeeded. Successful build notificatio
 
 ## Setup
 
-<CreateNotification />
+<CreateNotification notificationType="Build Status" />
 
 ## Configuring a new channel
 
