--- a/src/content/graphos/metrics/notifications/daily-reports.mdx
+++ b/src/content/graphos/metrics/notifications/daily-reports.mdx
@@ -15,9 +15,7 @@ Configure GraphOS to send a daily Slack summary of your graph's activity over th
 
 ## Setup
 
-<CreateNotification />
-
-8. Select a time zone. The report is sent daily at 9 AM in the selected time zone.
+<CreateNotification notificationType="Daily report" />
 
 ### Configuring a new channel
 
