--- a/src/content/graphos/metrics/notifications/index.mdx
+++ b/src/content/graphos/metrics/notifications/index.mdx
@@ -17,12 +17,12 @@ If you don't have a GraphOS organization yet, [get started here](../../quickstar
 GraphOS supports the following notification types:
 
 - [Daily reports](./daily-reports) of your graph's request rate, error rate, and latency
-- [Performance alerts](./performance-alerts) whenever a metric such as error percentage or request latency exceeds a particular threshold (this experimental feature requires a [paid plan](https://www.apollographql.com/pricing/))
+- [Performance alerts](./performance-alerts) whenever a metric such as error percentage or request latency exceeds a particular threshold
 - [Schema change notifications](./schema-change-integration) whenever your graph's schema is updated
 - [Schema proposal notifications](./schema-proposal-integration) whenever a schema proposal is created or revised, or if its status changes
-- [Build status notifications](./build-status-notification) whenever Apollo attempts to compose a supergraph schema for your federated graph (this preview feature is [enterprise only](https://www.apollographql.com/pricing/))
+- [Build status notifications](./build-status-notification) whenever Apollo attempts to compose a supergraph schema for your federated graph
 
-Refer to the specific notification type page for setup instructions.
+Refer to the notification type page for setup instructions.
 
 ## Supported channels
 
