--- a/src/content/graphos/metrics/notifications/schema-change-integration.mdx
+++ b/src/content/graphos/metrics/notifications/schema-change-integration.mdx
@@ -21,7 +21,7 @@ If you want to receive notifications via both Slack and webhook, you need to rep
 
 </Note>
 
-<CreateNotification />
+<CreateNotification notificationType="Schema Change" />
 
 ## Configuring a new channel
 
