--- a/src/content/graphos/metrics/notifications/schema-proposal-integration.mdx
+++ b/src/content/graphos/metrics/notifications/schema-proposal-integration.mdx
@@ -12,7 +12,7 @@ Configure GraphOS to send notifications to a custom webhook whenever schema prop
 
 ## Configuring a new channel
 
-<ConfigureWebhookNotification />
+<ConfigureWebhookNotification notificationType="Schema Proposal" />
 
 ## Webhook format
 
