--- a/src/content/graphos/metrics/notifications/daily-reports.mdx
+++ b/src/content/graphos/metrics/notifications/daily-reports.mdx
@@ -17,7 +17,7 @@ Configure GraphOS to send a daily Slack summary of your graph's activity over th
 
 <CreateNotification notificationType="Daily report" />
 
-### Configuring a new channel
+### Configure a new channel
 
 <ConfigureSlackNotification />
 
