--- a/src/content/graphos/metrics/notifications/index.mdx
+++ b/src/content/graphos/metrics/notifications/index.mdx
@@ -35,3 +35,11 @@ GraphOS can send notification types to the indicated channels:
 | Schema proposal notifications |       |           |       ✓        |
 | Build status notifications    |       |           |       ✓        |
 | Performance alerts            |   ✓   |     ✓     |                |
+
+## Notification availability
+
+- Custom webhooks are only available with an Enterprise plan.
+- Schema proposals, and therefore notifications about them, are only available with an Enterprise plan.
+- Performance alerts are only available with a paid plan.
+- Build status notifications are in [preview](/resources/product-launch-stages#preview).
+- Performance alerts are [experimental](/resources/product-launch-stages#experimental-features).
