--- a/src/content/graphos/metrics/notifications/performance-alerts.mdx
+++ b/src/content/graphos/metrics/notifications/performance-alerts.mdx
@@ -48,7 +48,7 @@ If you want to receive notifications via both Slack and PagerDuty, you need to r
 5. Select a **Channel** to send alerts to. You can select **New Channel** from the dropdown if you haven't yet configured the Slack channel or PagerDuty instance you want to use.
 6. Click **Create**.
 
-## Configuring a new channel
+## Configure a new channel
 
 You can send performance alerts via Slack, PagerDuty, or both.
 
