--- a/src/content/graphos/metrics/notifications/schema-change-integration.mdx
+++ b/src/content/graphos/metrics/notifications/schema-change-integration.mdx
@@ -23,7 +23,7 @@ If you want to receive notifications via both Slack and webhook, you need to rep
 
 <CreateNotification notificationType="Schema Change" />
 
-## Configuring a new channel
+## Configure a new channel
 
 You can send schema notifications via Slack, custom webhook, or both.
 
@@ -32,6 +32,12 @@ You can send schema notifications via Slack, custom webhook, or both.
 <ConfigureSlackNotification />
 
 ### Webhook
+
+<EnterpriseFeature>
+
+Sending notifications via webhook is only available with a [GraphOS Enterprise plan](https://www.apollographql.com/pricing#integrations?referrer=docs-content).
+
+</EnterpriseFeature>
 
 <ConfigureWebhookNotification />
 
