--- a/src/content/shared/configure-slack-notification.mdx
+++ b/src/content/shared/configure-slack-notification.mdx
@@ -5,7 +5,7 @@ To set up Slack notifications, you first configure an incoming webhook in Slack,
 To create an incoming Slack hook:
 
 1. From the [Incoming Hooks](https://slack.com/apps/A0F7XDUAZ-incoming-webhooks) page of the Slack App Directory, sign in and click **Add to Slack**.
-2. Select the Slack channel that should receive Studio notifications and click **Add Incoming WebHooks integration**.
+2. Select the Slack channel that should receive notifications and click **Add Incoming WebHooks integration**.
 3. Copy the **Webhook URL** (has the format `https://hooks.slack.com/services/...`) for use in the [next step](#2-provide-the-slack-hook-to-studio).
 
 You can repeat this process to create webhook URLs for different Slack channels.
