--- a/src/content/graphos/metrics/notifications/schema-proposal-integration.mdx
+++ b/src/content/graphos/metrics/notifications/schema-proposal-integration.mdx
@@ -4,15 +4,35 @@ subtitle: Receive alerts when a schema proposal is created or revised
 description: Set up Apollo GraphOS notifications for GraphQL schema proposals. Receive real-time alerts whenever schema proposals are created or revised, or if their status changes.
 ---
 
+<EnterpriseFeature>
+
+Schema proposals are only available with a [GraphOS Enterprise plan](https://www.apollographql.com/pricing?referrer=docs-content).
+
+</EnterpriseFeature>
+
 Configure GraphOS to send notifications to a custom webhook whenever schema proposals are created or revised, or if their status changes.
 
 ## Setup
 
-<CreateNotification />
+1. Select the **Reporting** tab.
+2. Click **Add notification** in the upper right.
+3. Select **Schema proposal** and click **Next**.
+4. Select the schema proposal event(s) you want to receive notifications for:
 
-## Configuring a new channel
+   - **Proposal creation**
+   - **Proposal revision**
+   - **Proposal status change**
 
-<ConfigureWebhookNotification notificationType="Schema Proposal" />
+5. Configure the webhook as described in the next section.
+
+## Configure webhook
+
+Custom webhooks require you to set up an HTTPS endpoint that is accessible via the public internet. Webhook notifications are sent to this endpoint as POST requests. Notification details are provided as JSON in the request body, as described in the next section.
+
+1. Specify an **Endpoint name**. This name must be unique among all your graph's notification channels, including Slack channels.
+2. In the **Webhook URL** field, provide the URL of your HTTP(S) endpoint.
+3. Optionally, enter a **Secret Token**, which will be sent as an `x-apollo-signature` header in the notification payload.
+4. Click **Next**.
 
 ## Webhook format
 
