--- a/src/content/shared/configure-webhook-notification.mdx
+++ b/src/content/shared/configure-webhook-notification.mdx
@@ -1,7 +1,5 @@
-<EnterpriseFeature linkWithAnchor="https://www.apollographql.com/pricing#integrations" />
-
 Custom webhooks require you to set up an HTTPS endpoint that is accessible via the public internet. Webhook notifications are sent to this endpoint as `POST` requests. Notification details are provided as JSON in the request body, as described in the next section.
 
-1. Specify a name for this notification channel in the **Channel Name** field. This name must be unique among of your graph's notification channels.
+1. Specify a name for this notification channel in the **Channel Name** field. This name must be unique among of your graph's notification channels, including Slack channel names.
 2. In the **Webhook URL** field, provide the URL of your HTTP(S) endpoint.
 3. Click **Next** and complete any remaining steps in the dialog.
