--- a/src/content/graphos/metrics/notifications/build-status-notification.mdx
+++ b/src/content/graphos/metrics/notifications/build-status-notification.mdx
@@ -15,7 +15,7 @@ Notifications indicate whether the build succeeded. Successful build notificatio
 
 <CreateNotification notificationType="Build Status" />
 
-## Configuring a new channel
+## Configure a new channel
 
 <ConfigureWebhookNotification />
 
