--- a/src/content/graphos/metrics/notifications/build-status-notification.mdx
+++ b/src/content/graphos/metrics/notifications/build-status-notification.mdx
@@ -8,8 +8,8 @@ description: Configure Apollo GraphOS to notify your team via webhook about sche
 
 <PreviewFeature />
 
-Configure GraphOS to send notifications to a custom webhook whenever GraphOS attempts to build a new supergraph schema for your federated graph.
-Notifications indicate whether the build succeeded. Successful build notifications include a temporary URL to the new supergraph schema if so.
+Configure GraphOS to send notifications to a webhook whenever GraphOS attempts to build a new supergraph schema for your federated graph.
+Notifications indicate whether the build succeeded. Successful build notifications include a temporary URL to the new supergraph schema.
 
 ## Setup
 
@@ -109,7 +109,7 @@ If the build fails, this field isn't present.
 </td>
 <td>
 
-Whether ot not the build succeeded
+Whether or not the build succeeded
 
 </td>
 </tr>
