--- a/src/content/graphos/metrics/notifications/daily-reports.mdx
+++ b/src/content/graphos/metrics/notifications/daily-reports.mdx
@@ -17,7 +17,7 @@ Configure GraphOS to send a daily Slack summary of your graph's activity over th
 
 <CreateNotification notificationType="Daily report" />
 
-### Configure a new channel
+### Configure a new Slack channel
 
 <ConfigureSlackNotification />
 
@@ -25,6 +25,8 @@ Configure GraphOS to send a daily Slack summary of your graph's activity over th
 
 The daily report provides an actionable summary of what's happened in your API over the last 24 hours. Here's how you can use it to identify issues:
 
-- **Request rate:** This shows you how many queries are hitting your server every minute, along with a list of the most popular operations. If you see a significant dip in this value, it might mean that queries aren't able to reach your server, or that a particular client is down.
-- **p95 service time:** An operation's p95 response time indicates that 95% of that operation's executions complete faster than the reported value. You can use this to identify that your API is overloaded and users are seeing long loading delays, or to find out which queries are taking the longest to run. This is often connected to UI performance, so a 500 ms query probably means some part of your UI is taking that long to display.
-- **Error percentage:** This shows you how many of your GraphQL requests produce an error result, along with a list of the operations with the highest error percentage. Spikes in errors might be the result of an underlying backend malfunction.
+- The **request rate** shows how many queries hit your server each minute. It also shows the most popular operations. If you see a significant dip in this value, it might mean that queries can't reach your server or that a particular client is down.
+- An operation's **p95 service time** indicates that 95% of that operation's executions complete faster than the reported value. You can use this to identify that your API is overloaded and users are seeing long loading delays or to find out which queries take the longest to run. This metric is often connected to UI performance, so a 500 ms query probably means some part of your UI takes that long to display.
+- The **error percentage** shows how many of your GraphQL requests produce an error. It also shows a list of the operations with the highest error percentage. Spikes in errors might be the result of an underlying backend malfunction.
+
+For more about these metrics, refer to the [operation metrics page](../../metrics/operations#operation-metrics).
