--- a/src/content/graphos/metrics/notifications/index.mdx
+++ b/src/content/graphos/metrics/notifications/index.mdx
@@ -4,7 +4,8 @@ subtitle: Learn about supported notification types and channels
 description: Set up notifications for your GraphQL graph's performance, schema changes, and more. Stay updated and address issues effectively using custom alerts.
 ---
 
-GraphOS can notify your team about changes to your graph and its performance. These notifications help you stay up to date and address issues as they arise.
+GraphOS can notify your team about changes to your graph and its performance.
+These notifications help you stay up-to-date and address issues as they arise.
 
 <Tip>
 
@@ -17,16 +18,16 @@ If you don't have a GraphOS organization yet, [get started here](../../quickstar
 GraphOS supports the following notification types:
 
 - [Daily reports](./daily-reports) of your graph's request rate, error rate, and latency
-- [Performance alerts](./performance-alerts) whenever a metric such as error percentage or request latency exceeds a particular threshold
+- [Performance alerts](./performance-alerts) whenever metrics like error percentage or request latency exceed a threshold
 - [Schema change notifications](./schema-change-integration) whenever your graph's schema is updated
 - [Schema proposal notifications](./schema-proposal-integration) whenever a schema proposal is created or revised, or if its status changes
-- [Build status notifications](./build-status-notification) whenever Apollo attempts to compose a supergraph schema for your federated graph
+- [Build status notifications](./build-status-notification) whenever GraphOS attempts to compose a supergraph schema
 
-Refer to the notification type page for setup instructions.
+Refer to notification type pages for setup instructions.
 
 ## Supported channels
 
-GraphOS can send notification types to the indicated channels:
+GraphOS can send notifications to the indicated channels:
 
 | Notification Type             | Slack | PagerDuty | Custom Webhook |
 | :---------------------------- | :---: | :-------: | :------------: |
@@ -39,7 +40,7 @@ GraphOS can send notification types to the indicated channels:
 ## Notification availability
 
 - Custom webhooks are only available with an Enterprise plan.
-- Schema proposals, and therefore notifications about them, are only available with an Enterprise plan.
+- Schema proposals and notifications about them are only available with an Enterprise plan.
 - Performance alerts are only available with a paid plan.
 - Build status notifications are in [preview](/resources/product-launch-stages#preview).
 - Performance alerts are [experimental](/resources/product-launch-stages#experimental-features).
